test_outputs/connlist/new_online_boutique_explain_output.txt

#####################################
# All Connections and their reasons #
#####################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => 0.0.0.0-255.255.255.255:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/loadgenerator[Deployment]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)


##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/cartservice[Deployment]:

ALLOWED TCP:[7070] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Ingress rule #1

DENIED TCP:[1-7069,7071-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/currencyservice[Deployment]:

ALLOWED TCP:[7000] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Ingress rule #1

DENIED TCP:[1-6999,7001-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/emailservice[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/paymentservice[Deployment]:

ALLOWED TCP:[50051] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Ingress rule #1

DENIED TCP:[1-50050,50052-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/productcatalogservice[Deployment]:

ALLOWED TCP:[3550] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Ingress rule #1

DENIED TCP:[1-3549,3551-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/shippingservice[Deployment]:

ALLOWED TCP:[50051] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Ingress rule #1

DENIED TCP:[1-50050,50052-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/adservice[Deployment]:

ALLOWED TCP:[9555] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Ingress rule #1

DENIED TCP:[1-9554,9556-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/cartservice[Deployment]:

ALLOWED TCP:[7070] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Ingress rule #1

DENIED TCP:[1-7069,7071-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/checkoutservice[Deployment]:

ALLOWED TCP:[5050] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Ingress rule #1

DENIED TCP:[1-5049,5051-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/currencyservice[Deployment]:

ALLOWED TCP:[7000] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Ingress rule #1

DENIED TCP:[1-6999,7001-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/productcatalogservice[Deployment]:

ALLOWED TCP:[3550] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Ingress rule #1

DENIED TCP:[1-3549,3551-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/recommendationservice[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/shippingservice[Deployment]:

ALLOWED TCP:[50051] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Ingress rule #1

DENIED TCP:[1-50050,50052-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/frontend[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress rule #1 (protocols not referenced)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/productcatalogservice[Deployment]:

ALLOWED TCP:[3550] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Ingress rule #1

DENIED TCP:[1-3549,3551-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress rule #1 (ports not referenced)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress rule #1 (protocols not referenced)


####################################
# No Connections and their reasons #
####################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-auth // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-auth // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice // Egress rule #1
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice // Ingress (captured but not selected by any Ingress rule)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => default/loadgenerator[Deployment]
